--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "cra-template": "1.2.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run client\" \"npm run server\"",
     "build": "react-scripts build",
+    "client": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
