--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "cra-template": "1.2.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1"
@@ -20,7 +24,8 @@
     "client": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 3001"
+    "server": "json-server --watch db.json --port 3001",
+    "start:json": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +48,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.1",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
